--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -1,7 +1,10 @@
 name: Build wheels
 
 on:
-  workflow_dispatch:
+  push:
+    tags:
+      - "zipline_symforce-v[0-9]+\\.[0-9]+\\.[0-9]+-rc[0-9]+"
+      - "zipline_symforce-v[0-9]+\\.[0-9]+\\.[0-9]+"
 
 jobs:
   build-extra:
@@ -17,10 +20,13 @@ jobs:
         python3 -m build --sdist --wheel gen/python --outdir ./dist
 
     - name: Upload Wheels
-      uses: actions/upload-artifact@v3
+      if: startsWith(github.ref, 'refs/tags')
+      uses: pypa/gh-action-pypi-publish@master
       with:
-        name: symforce-wheels
-        path: dist/*
+        user: ${{ secrets.ARTIFACTORY_USER }}
+        password: ${{ secrets.ARTIFACTORY_PASSWORD }}
+        repository_url: https://zipline.jfrog.io/zipline/api/pypi/pypi
+        packages_dir: client/dist/
 
   build-macos:
     runs-on: ${{ matrix.os }}
