--- a/symforce/opt/CMakeLists.txt
+++ b/symforce/opt/CMakeLists.txt
@@ -67,8 +67,7 @@ if (NOT tl_optional_FOUND)
     FetchContent_Declare(
       tl_optional
       GIT_REPOSITORY https://github.com/TartanLlama/optional
-      # NOTE: This pulls in TartanLlama/optional#45, which is not yet in any tagged releases.
-      GIT_TAG c28fcf74d207fc667c4ed3dbae4c251ea551c8c1
+      GIT_TAG v1.1.0
       GIT_SHALLOW TRUE
     )
     FetchContent_MakeAvailable(tl_optional)
